samples/_failures_safe/1761260234_2da544_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3982fd57.c: In function ‘main’:
./samples/SAFE/__tmp_3982fd57.c:138:13: error: expected declaration or statement at end of input
  138 |             MATRIX_PRINT(result, rows1, cols2);
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_3982fd57.c:138:13: error: expected declaration or statement at end of input
